[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wzarchive"
path = "src/wzarchive.rs"

[[bin]]
name = "wzimage"
path = "src/wzimage.rs"

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
crypto = { version = "0.1.0", path = "../crypto" }
image = { version = "0.24.6" }
wz = { version = "0.1.0", path = "../wz" }
