[package]
name = "hooks"
version = "0.1.0"
edition = "2021"

[lib]
name = "mapledev"
path = "src/mapledev.rs"
crate_type = ["cdylib"]

[[bin]]
name = "launcher"
path = "src/launcher.rs"

[dependencies]
lazy_static = { version = "1.4.0" }
retour = { version = "0.1.0" }
sysinfo = { version = "0.29.0" }

[dependencies.winapi]
version = "0.3.9"
features = [ "debugapi", "handleapi", "libloaderapi", "memoryapi", "minwindef", "processthreadsapi", "winnt", "winsock2", "ws2spi" ]
